1998-08-17  Mark Mitchell  <mark@markmitchell.com>

	* pt.c (check_explicit_specialization): Don't abort on bogus
	explicit instantiations.

1998-08-14  Jason Merrill  <jason@yorick.cygnus.com>

	* rtti.c (get_tinfo_fn): Don't mess with the context for now.

1998-08-13  Mumit Khan  <khan@xraylith.wisc.edu>

	* decl2.c (import_export_class): Don't use dllexport
	attribute as a heuristic.

1998-07-29  Jason Merrill  <jason@yorick.cygnus.com>

	* decl.c (push_overloaded_decl): Use current_namespace instead of
	DECL_CONTEXT (decl) to determine where we go.

	* decl.c (lookup_name_real): Fix typo.

1998-07-28  Jason Merrill  <jason@yorick.cygnus.com>

	* class.c (finish_struct_1): Convert integer_zero_node to
 	ssizetype before passing it to set_rtti_entry.
	* typeck2.c (initializer_constant_valid_p): Allow conversion of 0
	of any size to a pointer.

1998-07-27  Jason Merrill  <jason@yorick.cygnus.com>

	* typeck2.c (build_functional_cast): Handle default-initialization.

	* call.c (build_over_call): Pass 1 to popclass.

	* parse.y (direct_notype_declarator): Add precedence declaration
	to notype_unqualified_id case.
	* Makefile.in (EXPECT): Adjust.

	* tree.c (ovl_member): Fix for single function in OVL.

1998-07-24  Jason Merrill  <jason@yorick.cygnus.com>

	* decl.c (lookup_name_real): OK, do return the from_obj value
	unless got_object depends on template parms.

	* parse.y (nested_name_specifier_1): Pull out the TYPE_MAIN_VARIANT.

	* pt.c (coerce_template_parms): Also complain about local enums.

	* cp-tree.h: Add prototype for set_identifier_local_value.
	* decl.c (set_identifier_local_value_with_scope): Make static,
	prototype.
	* search.c (covariant_return_p): Likewise.
	* except.c (build_terminate_handler, alloc_eh_object): Likewise.

	* call.c (build_method_call): Only pull out the type of a destructor
	if it's a template type parm.
	* decl.c (lookup_name_real): Never return the from_obj value.

1998-07-23  Jason Merrill  <jason@yorick.cygnus.com>
